[package]
name = "maq_tic_tac_toe"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
label = "MACROQUAD TIC-TAC-TOE"
min_sdk_version = 26

[dependencies]
macroquad = { version = "0.4.7" }

[patch.crates-io]
# miniquad = { path = "../miniquad"}
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
