[package]
name = "maq_tic_tac_toe"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
label = "MACROQUAD TIC-TAC-TOE"
min_sdk_version = 26
target_sdk_version = 28
build_targets = ["armv7-linux-androideabi"]

[dependencies]
# macroquad = { path = "../macroquad" }
# macroquad = { version = "0.4.10" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }

[patch.crates-io]
# miniquad = { path = "../miniquad", features = ["log-impl"]}
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
# miniquad = { git = "https://github.com/birhburh/miniquad.git", branch = "blocking_event_loop_osx", features = ["log-impl"] }
# miniquad = { git = "https://github.com/birhburh/miniquad.git", branch = "old_js_compatibility", features = ["log-impl"] }
