[package]
name = "maq_tic_tac_toe"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
label = "MACROQUAD TIC-TAC-TOE"
min_sdk_version = 26
target_sdk_version = 28
build_targets = ["armv7-linux-androideabi"]

[dependencies]
# macroquad = { path = "../macroquad" }
macroquad = { version = "0.4.11" }
# macroquad = { git = "https://github.com/not-fl3/macroquad.git" }

[patch.crates-io]
# miniquad = { path = "../miniquad", features = ["log-impl"]}
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
# miniquad = { git = "https://github.com/birhburh/miniquad.git", branch = "coremidi_fix", features = ["log-impl"] }

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
overflow-checks = false
debug-assertions = false
rpath = false
codegen-units = 1
strip = true